<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="add_hint">Add a new item</string>
    <string name="add_button_label">Add</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="edit_item_title">Edit Item Below:</string>
    <string name="save_button_label">Save</string>
    <string name="hello_world">Hello world!</string>
    <string name="task_priority">Priority:</string>
    <string name="task_priority_low">Low</string>
    <string name="task_priority_high">High</string>
    <string name="task_deadline">Due Date : </string>
    <string name="title_dialog_edit_item">Edit Item</string>

</resources>
