<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.todoapplication.EditItemActivity" >

    <TextView
        android:id="@+id/tvEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/edit_item_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etEditItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditItem"
        android:layout_below="@+id/tvEditItem"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPriorityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etEditItem"
        android:layout_below="@+id/etEditItem"
        android:layout_marginTop="21dp"
        android:text="@string/task_priority"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/save_button_label" />

    <RadioGroup
        android:id="@+id/rgTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvPriorityLabel"
        android:layout_below="@+id/tvPriorityLabel"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbTaskPriorityLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/task_priority_low" />

        <RadioButton
            android:id="@+id/rbTaskPriorityHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_high" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvDateFinishLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rgTaskPriority"
        android:layout_below="@+id/rgTaskPriority"
        android:layout_marginTop="21dp"
        android:text="@string/task_deadline"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvDateFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvDateFinishLabel"
        android:layout_alignBottom="@+id/tvDateFinishLabel"
        android:layout_toRightOf="@+id/tvDateFinishLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
